syntax = "proto3";

option java_package = "ru.spbau.mit.benchmarks.generated";

message SortData {
    repeated int32 data = 1;
};